# protagodoc_benchmark

./: .env.example  .gitignore  DATASET_GENERATOR_README.md  README.md  benchmark.sh  dataset_generators.py  generate_dataset.py  generate_dataset.sh  image_utils.py  language_distribution_chart.md  pyproject.toml  requirements.txt  run.sh
bench/: README.md  __init__.py  benchmark.py  convert.py  prompts.py  repeatdetect.py  report.py  review_app.py  review_app_latex.py  tests.py  utils.py
bench/katex/: render.py
bench/miners/: check_headers_footers.py  check_multicolumn.py  check_old_scans_math.py  cleanup_data.py  cleanup_urls.py  delete_rejected.py  download_math.py  mine_diffs.py  mine_headers_footers.py  mine_long_tiny_text.py  mine_math.py  mine_multi_column.py  mine_old_scan_pdf.py  mine_old_scans.py  mine_old_scans_math.py  mine_reading_order.py  mine_tables_gemini.py  mine_tables_gpt.py  pick_mediod.py
bench/orbit_data/: dataset.jsonl
bench/runners/: __init__.py  run_azure_di.py  run_chatgpt.py  run_claude.py  run_docling.py  run_gemini.py  run_gotocr.py  run_marker.py  run_mineru.py  run_mistral.py  run_nanonetsocr.py  run_olmocr_pipeline.py  run_rolmocr.py  run_server.py  run_transformers.py
bench/sample_data/: dataset.jsonl  table_tests.jsonl
data/: buildsilver.py  renderpdf.py  runopenaibatch.py
scripts/: azure_markdown.ipynb  azure_markdown.py  download_datasets.sh  download_olmocr_bench.py  download_olmocr_bench.sh  extract_azure.sh  filter_language.py  preprocess_raw_orbit_v2.sh  preprocess_raw_orbit_v3.sh  split_pdfs_by_page.py
(+52 files in other folders)
